# kogia

./: .coveragerc  .flake8  .gitignore  CONTRIBUTING.md  README.rst  pyproject.toml  setup.py
.github/: pull_request_template.md
docs/: README.rst  conf.py  getting-started.rst  index.rst
docs/references/: models.rst  views.rst
docs/releases/: 0.1.0.rst
kogia/core/locale/fr/LC_MESSAGES/: django.mo
kogia/intl/locale/fr/LC_MESSAGES/: django.mo
kogia/pages/locale/en/LC_MESSAGES/: django.mo
src/kogia/: __about__.py
src/kogia/core/: apps.py  models.py
src/kogia/core/locale/en/LC_MESSAGES/: django.po
src/kogia/core/locale/fr/LC_MESSAGES/: django.mo  django.po
src/kogia/core/tests/: models.py  test_models.py
src/kogia/intl/: apps.py  models.py
src/kogia/intl/locale/en/LC_MESSAGES/: django.mo  django.po
src/kogia/intl/locale/fr/LC_MESSAGES/: django.mo  django.po
src/kogia/intl/tests/: models.py  test_models.py
src/kogia/pages/: apps.py  models.py  views.py
src/kogia/pages/locale/en/LC_MESSAGES/: django.po
src/kogia/pages/locale/fr/LC_MESSAGES/: django.mo  django.po
src/kogia/pages/tests/: models.py  test_models.py  test_views.py  urls.py  views.py
tests/: settings.py  urls.py
