[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kogia"
description = "Django toolbox."
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
keywords = ["django", "kogia"]
authors = [
  { name = "Pascal Pepe", email = "contact@pascalpepe.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
  "django>=3.2",
]
dynamic = ["version"]

[project.urls]
"Home" = "https://github.com/pascalpepe/kogia#readme"
"Documentation" = "https://github.com/pascalpepe/kogia/tree/main/docs"
"Source code" = "https://github.com/pascalpepe/kogia"
"Issue tracker" = "https://github.com/pascalpepe/kogia/issues"

[tool.hatch.version]
path = "src/kogia/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests",
  "/.flake8",
  "/manage.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kogia"]

[tool.coverage.run]
branch = true
omit = [
  "manage.py",
  "src/kogia/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
]
